tests/snapshots/tokenize__comment_line.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(x) at 3:9\n= at 3:11\nIntLiteral(42) at 3:13\n; at 3:15\nreturn at 5:5\nIdentifier(x) at 5:12\n; at 5:13\n} at 6:1\nEOF at 7:1\n"
stderr: ""
status: 0
