tests/snapshots/tokenize__comment_nested.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(a) at 2:9\n= at 2:11\nIntLiteral(5) at 2:13\n; at 2:14\nint at 6:5\nIdentifier(b) at 6:9\n= at 6:11\nIntLiteral(10) at 6:13\n; at 6:15\nreturn at 7:5\nIdentifier(a) at 7:12\n+ at 7:14\nIdentifier(b) at 7:16\n; at 7:17\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
