tests/snapshots/tokenize__commonsym.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\nint at 25:1\nIdentifier(x) at 25:5\n; at 25:6\nint at 26:1\nIdentifier(x) at 26:5\n= at 26:7\nIntLiteral(5, None) at 26:9\n; at 26:10\nint at 27:1\nIdentifier(y) at 27:5\n= at 27:7\nIntLiteral(7, None) at 27:9\n; at 27:10\nint at 28:1\nIdentifier(y) at 28:5\n; at 28:6\nint at 29:1\nIdentifier(common_ext1) at 29:5\n; at 29:16\nint at 30:1\nIdentifier(common_ext2) at 30:5\n; at 30:16\nstatic at 31:1\nint at 31:8\nIdentifier(common_local) at 31:12\n; at 31:24\nint at 33:1\nIdentifier(main) at 33:5\n( at 33:9\n) at 33:10\n{ at 33:12\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(5, None) at 34:10\n, at 34:11\nIdentifier(x) at 34:13\n, at 34:14\nStringLiteral(\"5\") at 34:16\n) at 34:19\n; at 34:20\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(7, None) at 35:10\n, at 35:11\nIdentifier(y) at 35:13\n, at 35:14\nStringLiteral(\"y\") at 35:16\n) at 35:19\n; at 35:20\nIdentifier(assert) at 36:3\n( at 36:9\nIntLiteral(0, None) at 36:10\n, at 36:11\nIdentifier(common_ext1) at 36:13\n, at 36:24\nStringLiteral(\"common_ext1\") at 36:26\n) at 36:39\n; at 36:40\nIdentifier(assert) at 37:3\n( at 37:9\nIntLiteral(3, None) at 37:10\n, at 37:11\nIdentifier(common_ext2) at 37:13\n, at 37:24\nStringLiteral(\"common_ext2\") at 37:26\n) at 37:39\n; at 37:40\nIdentifier(printf) at 39:3\n( at 39:9\nStringLiteral(\"OK\n\") at 39:10\n) at 39:16\n; at 39:17\nreturn at 40:3\nIntLiteral(0, None) at 40:10\n; at 40:11\n} at 41:1\nEOF at 42:1\n"
stderr: ""
status: 0
