tests/snapshots/tokenize__compare_logic.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(a) at 2:9\n= at 2:11\nIntLiteral(5) at 2:13\n; at 2:14\nint at 3:5\nIdentifier(b) at 3:9\n= at 3:11\nIntLiteral(7) at 3:13\n; at 3:14\nint at 4:5\nIdentifier(c) at 4:9\n= at 4:11\nIntLiteral(0) at 4:13\n; at 4:14\nif at 5:5\n( at 5:8\nIdentifier(a) at 5:9\n< at 5:11\nIdentifier(b) at 5:13\n&& at 5:15\nIdentifier(b) at 5:18\n!= at 5:20\nIntLiteral(0) at 5:23\n) at 5:24\n{ at 5:26\nIdentifier(c) at 6:9\n= at 6:11\nIntLiteral(1) at 6:13\n; at 6:14\n} at 7:5\nif at 8:5\n( at 8:8\nIdentifier(a) at 8:9\n>= at 8:11\nIdentifier(b) at 8:14\n|| at 8:16\nIdentifier(a) at 8:19\n== at 8:21\nIntLiteral(5) at 8:24\n) at 8:25\n{ at 8:27\nIdentifier(c) at 9:9\n= at 9:11\nIdentifier(c) at 9:13\n+ at 9:15\nIntLiteral(2) at 9:17\n; at 9:18\n} at 10:5\nreturn at 11:5\nIdentifier(c) at 11:12\n; at 11:13\n} at 12:1\nEOF at 13:1\n"
stderr: ""
status: 0
