tests/snapshots/tokenize__complex_macros.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 3:1\nIdentifier(main) at 3:5\n( at 3:9\n) at 3:10\n{ at 3:12\nint at 4:5\nIdentifier(a) at 4:9\n= at 4:11\n( at 4:13\n( at 4:14\nIntLiteral(10) at 4:15\n) at 4:17\n> at 4:19\n( at 4:21\nIntLiteral(20) at 4:22\n) at 4:24\n? at 4:26\n( at 4:28\nIntLiteral(10) at 4:29\n) at 4:31\n: at 4:33\n( at 4:35\nIntLiteral(20) at 4:36\n) at 4:38\n) at 4:39\n; at 4:40\nint at 5:5\nIdentifier(b) at 5:9\n= at 5:11\n( at 5:13\n( at 5:14\nIntLiteral(15) at 5:15\n) at 5:17\n< at 5:19\n( at 5:21\nIntLiteral(5) at 5:22\n) at 5:23\n? at 5:25\n( at 5:27\nIntLiteral(15) at 5:28\n) at 5:30\n: at 5:32\n( at 5:34\nIntLiteral(5) at 5:35\n) at 5:36\n) at 5:37\n; at 5:38\nint at 6:5\nIdentifier(c) at 6:9\n= at 6:11\n( at 6:13\n( at 6:14\nIntLiteral(0) at 6:15\n- at 6:17\nIntLiteral(7) at 6:19\n) at 6:20\n< at 6:22\nIntLiteral(0) at 6:24\n? at 6:26\n- at 6:28\n( at 6:29\nIntLiteral(0) at 6:30\n- at 6:32\nIntLiteral(7) at 6:34\n) at 6:35\n: at 6:37\n( at 6:39\nIntLiteral(0) at 6:40\n- at 6:42\nIntLiteral(7) at 6:44\n) at 6:45\n) at 6:46\n; at 6:47\nreturn at 7:5\nIdentifier(a) at 7:12\n+ at 7:14\nIdentifier(b) at 7:16\n+ at 7:18\nIdentifier(c) at 7:20\n; at 7:21\n} at 8:1\nEOF at 9:1\n"
stderr: ""
status: 0
