tests/snapshots/tokenize__complit.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 3:1\nIdentifier(assert) at 3:6\n( at 3:12\nint at 3:13\nIdentifier(expected) at 3:17\n, at 3:25\nint at 3:27\nIdentifier(actual) at 3:31\n, at 3:37\nchar at 3:39\n* at 3:44\nIdentifier(code) at 3:45\n) at 3:49\n; at 3:50\nint at 4:1\nIdentifier(printf) at 4:5\n( at 4:11\nchar at 4:12\n* at 4:17\nIdentifier(fmt) at 4:18\n, at 4:21\n... at 4:23\n) at 4:26\n; at 4:27\nint at 5:1\nIdentifier(sprintf) at 5:5\n( at 5:12\nchar at 5:13\n* at 5:18\nIdentifier(buf) at 5:19\n, at 5:22\nchar at 5:24\n* at 5:29\nIdentifier(fmt) at 5:30\n, at 5:33\n... at 5:35\n) at 5:38\n; at 5:39\nint at 6:1\nIdentifier(vsprintf) at 6:5\n( at 6:13\nchar at 6:14\n* at 6:19\nIdentifier(buf) at 6:20\n, at 6:23\nchar at 6:25\n* at 6:30\nIdentifier(fmt) at 6:31\n, at 6:34\nvoid at 6:36\n* at 6:41\nIdentifier(ap) at 6:42\n) at 6:44\n; at 6:45\nint at 7:1\nIdentifier(strcmp) at 7:5\n( at 7:11\nchar at 7:12\n* at 7:17\nIdentifier(p) at 7:18\n, at 7:19\nchar at 7:21\n* at 7:26\nIdentifier(q) at 7:27\n) at 7:28\n; at 7:29\nint at 8:1\nIdentifier(strncmp) at 8:5\n( at 8:12\nchar at 8:13\n* at 8:18\nIdentifier(p) at 8:19\n, at 8:20\nchar at 8:22\n* at 8:27\nIdentifier(q) at 8:28\n, at 8:29\nlong at 8:31\nIdentifier(n) at 8:36\n) at 8:37\n; at 8:38\nint at 9:1\nIdentifier(memcmp) at 9:5\n( at 9:11\nchar at 9:12\n* at 9:17\nIdentifier(p) at 9:18\n, at 9:19\nchar at 9:21\n* at 9:26\nIdentifier(q) at 9:27\n, at 9:28\nlong at 9:30\nIdentifier(n) at 9:35\n) at 9:36\n; at 9:37\nvoid at 10:1\nIdentifier(exit) at 10:6\n( at 10:10\nint at 10:11\nIdentifier(n) at 10:15\n) at 10:16\n; at 10:17\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nvoid at 16:1\nIdentifier(assert) at 16:6\n( at 16:12\nint at 16:13\nIdentifier(expected) at 16:17\n, at 16:25\nint at 16:27\nIdentifier(actual) at 16:31\n, at 16:37\nchar at 16:39\n* at 16:44\nIdentifier(code) at 16:45\n) at 16:49\n{ at 16:51\nif at 17:3\n( at 17:6\nIdentifier(expected) at 17:7\n== at 17:16\nIdentifier(actual) at 17:19\n) at 17:25\n{ at 17:27\nIdentifier(printf) at 18:5\n( at 18:11\nStringLiteral(\"%s => %d\n\") at 18:12\n, at 18:24\nIdentifier(code) at 18:26\n, at 18:30\nIdentifier(actual) at 18:32\n) at 18:38\n; at 18:39\n} at 19:3\nelse at 19:5\n{ at 19:10\nIdentifier(printf) at 20:5\n( at 20:11\nStringLiteral(\"%s => %d expected but got %d\n\") at 20:12\n, at 20:44\nIdentifier(code) at 20:46\n, at 20:50\nIdentifier(expected) at 20:52\n, at 20:60\nIdentifier(actual) at 20:62\n) at 20:68\n; at 20:69\nIdentifier(exit) at 21:5\n( at 21:9\nIntLiteral(1, None) at 21:10\n) at 21:11\n; at 21:12\n} at 22:3\n} at 23:1\ntypedef at 25:1\nstruct at 25:9\nIdentifier(Tree) at 25:16\n{ at 25:21\nint at 26:3\nIdentifier(val) at 26:7\n; at 26:10\nstruct at 27:3\nIdentifier(Tree) at 27:10\n* at 27:15\nIdentifier(lhs) at 27:16\n; at 27:19\nstruct at 28:3\nIdentifier(Tree) at 28:10\n* at 28:15\nIdentifier(rhs) at 28:16\n; at 28:19\n} at 29:1\nIdentifier(Tree) at 29:3\n; at 29:7\nIdentifier(Tree) at 31:1\n* at 31:6\nIdentifier(tree) at 31:7\n= at 31:12\n& at 31:14\n( at 31:15\nIdentifier(Tree) at 31:16\n) at 31:20\n{ at 31:21\nIntLiteral(1, None) at 32:3\n, at 32:4\n& at 33:3\n( at 33:4\nIdentifier(Tree) at 33:5\n) at 33:9\n{ at 33:10\nIntLiteral(2, None) at 34:5\n, at 34:6\n& at 35:5\n( at 35:6\nIdentifier(Tree) at 35:7\n) at 35:11\n{ at 35:12\nIntLiteral(3, None) at 35:14\n, at 35:15\nIntLiteral(0, None) at 35:17\n, at 35:18\nIntLiteral(0, None) at 35:20\n} at 35:22\n, at 35:23\n& at 36:5\n( at 36:6\nIdentifier(Tree) at 36:7\n) at 36:11\n{ at 36:12\nIntLiteral(4, None) at 36:14\n, at 36:15\nIntLiteral(0, None) at 36:17\n, at 36:18\nIntLiteral(0, None) at 36:20\n} at 36:22\n} at 37:3\n, at 37:4\nIntLiteral(0, None) at 38:3\n} at 39:1\n; at 39:2\nint at 41:1\nIdentifier(main) at 41:5\n( at 41:9\n) at 41:10\n{ at 41:12\nIdentifier(assert) at 42:3\n( at 42:9\nIntLiteral(1, None) at 42:10\n, at 42:11\n( at 42:13\nint at 42:14\n) at 42:17\n{ at 42:18\nIntLiteral(1, None) at 42:19\n} at 42:20\n, at 42:21\nStringLiteral(\"(int){1}\") at 42:23\n) at 42:33\n; at 42:34\nIdentifier(assert) at 43:3\n( at 43:9\nIntLiteral(2, None) at 43:10\n, at 43:11\n( at 43:13\n( at 43:14\nint at 43:15\n[ at 43:18\n] at 43:19\n) at 43:20\n{ at 43:21\nIntLiteral(0, None) at 43:22\n, at 43:23\nIntLiteral(1, None) at 43:24\n, at 43:25\nIntLiteral(2, None) at 43:26\n} at 43:27\n) at 43:28\n[ at 43:29\nIntLiteral(2, None) at 43:30\n] at 43:31\n, at 43:32\nStringLiteral(\"((int[]){0,1,2})[2]\") at 43:34\n) at 43:55\n; at 43:56\nIdentifier(assert) at 44:3\n( at 44:9\nCharLiteral(97) at 44:10\n, at 44:13\n( at 44:15\n( at 44:16\nstruct at 44:17\n{ at 44:24\nchar at 44:25\nIdentifier(a) at 44:30\n; at 44:31\nint at 44:33\nIdentifier(b) at 44:37\n; at 44:38\n} at 44:39\n) at 44:40\n{ at 44:41\nCharLiteral(97) at 44:42\n, at 44:45\nIntLiteral(3, None) at 44:47\n} at 44:48\n) at 44:49\n. at 44:50\nIdentifier(a) at 44:51\n, at 44:52\nStringLiteral(\"((struct {char a; int b;}){'a', 3}).a\") at 44:54\n) at 44:93\n; at 44:94\nIdentifier(assert) at 45:3\n( at 45:9\nIntLiteral(3, None) at 45:10\n, at 45:11\n( at 45:13\n{ at 45:14\nint at 45:16\nIdentifier(x) at 45:20\n= at 45:21\nIntLiteral(3, None) at 45:22\n; at 45:23\n( at 45:25\nint at 45:26\n) at 45:29\n{ at 45:30\nIdentifier(x) at 45:31\n} at 45:32\n; at 45:33\n} at 45:35\n) at 45:36\n, at 45:37\nStringLiteral(\"({ int 3=3; (int){3}; })\") at 45:39\n) at 45:65\n; at 45:66\n( at 46:3\nint at 46:4\n) at 46:7\n{ at 46:8\nIntLiteral(3, None) at 46:9\n} at 46:10\n= at 46:12\nIntLiteral(5, None) at 46:14\n; at 46:15\nIdentifier(assert) at 48:3\n( at 48:9\nIntLiteral(1, None) at 48:10\n, at 48:11\nIdentifier(tree) at 48:13\n-> at 48:17\nIdentifier(val) at 48:19\n, at 48:22\nStringLiteral(\"tree->val\") at 48:24\n) at 48:35\n; at 48:36\nIdentifier(assert) at 49:3\n( at 49:9\nIntLiteral(2, None) at 49:10\n, at 49:11\nIdentifier(tree) at 49:13\n-> at 49:17\nIdentifier(lhs) at 49:19\n-> at 49:22\nIdentifier(val) at 49:24\n, at 49:27\nStringLiteral(\"tree->lhs->val\") at 49:29\n) at 49:45\n; at 49:46\nIdentifier(assert) at 50:3\n( at 50:9\nIntLiteral(3, None) at 50:10\n, at 50:11\nIdentifier(tree) at 50:13\n-> at 50:17\nIdentifier(lhs) at 50:19\n-> at 50:22\nIdentifier(lhs) at 50:24\n-> at 50:27\nIdentifier(val) at 50:29\n, at 50:32\nStringLiteral(\"tree->lhs->lhs->val\") at 50:34\n) at 50:55\n; at 50:56\nIdentifier(assert) at 51:3\n( at 51:9\nIntLiteral(4, None) at 51:10\n, at 51:11\nIdentifier(tree) at 51:13\n-> at 51:17\nIdentifier(lhs) at 51:19\n-> at 51:22\nIdentifier(rhs) at 51:24\n-> at 51:27\nIdentifier(val) at 51:29\n, at 51:32\nStringLiteral(\"tree->lhs->rhs->val\") at 51:34\n) at 51:55\n; at 51:56\nIdentifier(printf) at 53:3\n( at 53:9\nStringLiteral(\"OK\n\") at 53:10\n) at 53:16\n; at 53:17\nreturn at 54:3\nIntLiteral(0, None) at 54:10\n; at 54:11\n} at 55:1\nEOF at 56:1\n"
stderr: ""
status: 0
