tests/snapshots/tokenize__compound_assign.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(x) at 2:9\n= at 2:11\nIntLiteral(10) at 2:13\n; at 2:15\nunsigned at 3:5\nint at 3:14\nIdentifier(u) at 3:18\n= at 3:20\nIntLiteral(100) at 3:22\n; at 3:25\nIdentifier(x) at 5:5\n+= at 5:7\nIntLiteral(5) at 5:10\n; at 5:11\nIdentifier(x) at 6:5\n-= at 6:7\nIntLiteral(3) at 6:10\n; at 6:11\nIdentifier(x) at 7:5\n*= at 7:7\nIntLiteral(2) at 7:10\n; at 7:11\nIdentifier(x) at 8:5\n/= at 8:7\nIntLiteral(3) at 8:10\n; at 8:11\nIdentifier(x) at 9:5\n%= at 9:7\nIntLiteral(7) at 9:10\n; at 9:11\nIdentifier(x) at 10:5\n<<= at 10:7\nIntLiteral(2) at 10:11\n; at 10:12\nIdentifier(x) at 11:5\n>>= at 11:7\nIntLiteral(1) at 11:11\n; at 11:12\nIdentifier(x) at 12:5\n&= at 12:7\nIntLiteral(31) at 12:10\n; at 12:12\nIdentifier(x) at 13:5\n|= at 13:7\nIntLiteral(3) at 13:10\n; at 13:11\nIdentifier(x) at 14:5\n^= at 14:7\nIntLiteral(5) at 14:10\n; at 14:11\nIdentifier(u) at 16:5\n+= at 16:7\nIntLiteral(20) at 16:10\n; at 16:12\nIdentifier(u) at 17:5\n-= at 17:7\nIntLiteral(10) at 17:10\n; at 17:12\nIdentifier(u) at 18:5\n*= at 18:7\nIntLiteral(2) at 18:10\n; at 18:11\nIdentifier(u) at 19:5\n/= at 19:7\nIntLiteral(5) at 19:10\n; at 19:11\nIdentifier(u) at 20:5\n%= at 20:7\nIntLiteral(9) at 20:10\n; at 20:11\nIdentifier(u) at 21:5\n<<= at 21:7\nIntLiteral(1) at 21:11\n; at 21:12\nIdentifier(u) at 22:5\n>>= at 22:7\nIntLiteral(2) at 22:11\n; at 22:12\nIdentifier(u) at 23:5\n&= at 23:7\nIntLiteral(255) at 23:10\n; at 23:13\nIdentifier(u) at 24:5\n|= at 24:7\nIntLiteral(1) at 24:10\n; at 24:11\nIdentifier(u) at 25:5\n^= at 25:7\nIntLiteral(4) at 25:10\n; at 25:11\nreturn at 27:5\n( at 27:12\nIdentifier(x) at 27:13\n+ at 27:15\nIdentifier(u) at 27:17\n) at 27:18\n& at 27:20\nIntLiteral(255) at 27:22\n; at 27:25\n} at 28:1\nEOF at 29:1\n"
stderr: ""
status: 0
