tests/snapshots/tokenize__const.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\n{ at 16:3\nconst at 16:5\nIdentifier(x) at 16:11\n; at 16:12\n} at 16:14\n{ at 17:3\nint at 17:5\nconst at 17:9\nIdentifier(x) at 17:15\n; at 17:16\n} at 17:18\n{ at 18:3\nconst at 18:5\nint at 18:11\nIdentifier(x) at 18:15\n; at 18:16\n} at 18:18\n{ at 19:3\nconst at 19:5\nint at 19:11\nconst at 19:15\nconst at 19:21\nIdentifier(x) at 19:27\n; at 19:28\n} at 19:30\nIdentifier(assert) at 20:3\n( at 20:9\nIntLiteral(5, None) at 20:10\n, at 20:11\n( at 20:13\n{ at 20:14\nconst at 20:16\nIdentifier(x) at 20:22\n= at 20:24\nIntLiteral(5, None) at 20:26\n; at 20:27\nIdentifier(x) at 20:29\n; at 20:30\n} at 20:32\n) at 20:33\n, at 20:34\nStringLiteral(\"({ const 5 = 5; 5; })\") at 20:36\n) at 20:59\n; at 20:60\nIdentifier(assert) at 21:3\n( at 21:9\nIntLiteral(8, None) at 21:10\n, at 21:11\n( at 21:13\n{ at 21:14\nconst at 21:16\nIdentifier(x) at 21:22\n= at 21:24\nIntLiteral(8, None) at 21:26\n; at 21:27\nint at 21:29\n* at 21:33\nconst at 21:34\nIdentifier(y) at 21:40\n= at 21:41\n& at 21:42\nIdentifier(x) at 21:43\n; at 21:44\n* at 21:46\nIdentifier(y) at 21:47\n; at 21:48\n} at 21:50\n) at 21:51\n, at 21:52\nStringLiteral(\"({ const 8 = 8; int *const ({ const x = 8; int *const y=&x; *y; })=&8; *({ const x = 8; int *const y=&x; *y; }); })\") at 21:54\n) at 21:171\n; at 21:172\nIdentifier(assert) at 22:3\n( at 22:9\nIntLiteral(6, None) at 22:10\n, at 22:11\n( at 22:13\n{ at 22:14\nconst at 22:16\nIdentifier(x) at 22:22\n= at 22:24\nIntLiteral(6, None) at 22:26\n; at 22:27\n* at 22:29\n( at 22:30\nconst at 22:31\n* at 22:37\nconst at 22:39\n) at 22:44\n& at 22:45\nIdentifier(x) at 22:46\n; at 22:47\n} at 22:49\n) at 22:50\n, at 22:51\nStringLiteral(\"({ const 6 = 6; *(const * const)&6; })\") at 22:53\n) at 22:93\n; at 22:94\nIdentifier(printf) at 24:3\n( at 24:9\nStringLiteral(\"OK\n\") at 24:10\n) at 24:16\n; at 24:17\nreturn at 25:3\nIntLiteral(0, None) at 25:10\n; at 25:11\n} at 26:1\nEOF at 27:1\n"
stderr: ""
status: 0
