tests/snapshots/tokenize__const_var.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nconst at 3:5\nint at 3:11\nIdentifier(x) at 3:15\n= at 3:17\nIntLiteral(42, None) at 3:19\n; at 3:21\nreturn at 4:5\nIdentifier(x) at 4:12\n; at 4:13\n} at 5:1\nEOF at 6:1\n"
stderr: ""
status: 0
